--- a/dev/pug/company.pug
+++ b/dev/pug/company.pug
@@ -5,12 +5,7 @@ block variables
 
 block content
     include pages/company/hero-company
-    +taber(tabsIndex)
-    //include pages/index/cases
-    include modules/topcases
-    include pages/index/showreel
-    include pages/index/counters
-    include pages/index/clients
-    +feedbackSlider(feedbacks, 'Отзывы')
-    include pages/index/latest-post
-    include pages/index/hr
+    include pages/company/about
+    include pages/company/press
+    +taber(tabsAdStep, 'Вакансии', 'light')
+    include pages/company/more
