Add page-slider-blocks (nope)

--- a/dev/pug/company.pug
+++ b/dev/pug/company.pug
@@ -6,6 +6,7 @@ block variables
 block content
     include pages/company/hero-company
     include pages/company/about
+    +pageSlider('Мероприятия', events)
     include pages/company/press
     +taber(tabsAdStep, 'Вакансии', 'light')
     include pages/company/more
