--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -810,3 +810,15 @@
             'Участвуем в программе мониторинга качества внедрений',
         ]
     }
+
+-
+    var events = {
+        imgs: [
+            'skolkovo.jpg',
+            'skolkovo.jpg',
+        ],
+        content: [
+            'ITC является экспертом крупнейшего в России Digital кластера - РАЭК. ',
+            'Мы регулярно участвуем в различных отраслевых конференциях как в качестве слушателей, так и выступаем спикерами по темам, связанным с интернет-маркетингом. ',
+        ]
+    }
