--- a/dev/pug/utils/mixins.pug
+++ b/dev/pug/utils/mixins.pug
@@ -91,7 +91,7 @@ mixin pageSlider(title, arr)
             h2.h2._title= title
             ._wrap
                 ._left
-                    ._imgs.owl-carousel
+                    ._imgs(class= arr.imgs.length > 1 ? 'owl-carousel' : '')
                         each img in arr.imgs
                             img(src="images/content/" + img, alt= title)._img
                 ._right
