Add company pages (done)

--- a/dev/pug/company.pug
+++ b/dev/pug/company.pug
@@ -8,5 +8,7 @@ block content
     include pages/company/about
     +pageSlider('Мероприятия', events)
     include pages/company/press
-    +taber(tabsAdStep, 'Вакансии', 'light')
+    +pageSlider('Корпоративная жизнь', corpLife)
+    +taber(tabsHr, 'Вакансии', 'light')
     include pages/company/more
+
