--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -26,6 +26,7 @@
             icon: 'insta',
         },
     ]
+
 -
     var mainMenu = [
         {
@@ -49,6 +50,7 @@
             link: 'contacts.html'
         },
     ]
+
 -
     var secondMenu = [
         {
@@ -72,6 +74,7 @@
             link: 'site-develop.html'
         },
     ]
+
 -
     var cities = [
         {
@@ -107,6 +110,7 @@
             link: '#'
         },
     ]
+
 -
     var tabsIndex = [
         {
@@ -133,6 +137,7 @@
                     <p><a class="taber__link" href="#" title="Поисковое продвижение">подробнее…</a></p>`,
         },
     ]
+
 -
     var tabsPromo1 = [
         {
@@ -445,6 +450,62 @@
         },
         {
             title: 'Таргетироанная реклама',
+            text: `<p>Технические новинки, предложения по улучшению юзабилити сайта, варианты решения бизнес-задач — это и многое другое наш подход к работе. Регулярные отчеты включают в себя понятные детальные описания о состоянии Вашего сервера и сайта</p>`,
+        },
+    ]
+
+-
+    var tabsHr = [
+        {
+            title: 'SMM-менеджер/Таргетолог',
+            text: `<h5 class="h5 pl30">Обязанности:</h5>
+                    <ul>
+                      <li>Работа с контекстной рекламой Яндекс Директ/Google AdWords.</li>
+                      <li>Создание, ведение, настройка и анализ эффективности рекламных кампаний.</li>
+                      <li>Удержание цены заказа на нужном уровне.</li>
+                      <li>Корректировка, подбор ключевых слов.</li>
+                      <li>Составление «эффективных» объявлений.</li>
+                    </ul>
+                    <h5 class="h5 pl30">Необходимые навыки:</h5>
+                    <ul>
+                      <li>Наличие опыта настройки контекстных рекламных кампаний.</li>
+                      <li>Работа с таргетированной рекламой будет плюсом</li>
+                    </ul>
+                    <h5 class="h5 pl30">Условия:</h5>
+                    <ul>
+                      <li>Стандартная рабочая неделя;</li>
+                      <li>Стабильная заработная плата без задержек по итогам собеседования + бонус за KPI;</li>
+                      <li>Гибкое начало дня (с 9 до 10);</li>
+                      <li>Комфортное рабочее место.</li>
+                    </ul>
+                    <p><strong>Хочешь работать с нами?</strong> Высылай резюме и пару слов о себе на <a href="mailto:hr@itc-media.ru">hr@itc-media.ru</a>.</p>`,
+        },
+        {
+            title: 'Битрикс-программист ',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Frontend-разработчик',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'SEO-оптимизатор',
+            text: `<p>Технические новинки, предложения по улучшению юзабилити сайта, варианты решения бизнес-задач — это и многое другое наш подход к работе. Регулярные отчеты включают в себя понятные детальные описания о состоянии Вашего сервера и сайта</p>`,
+        },
+        {
+            title: 'Директолог',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Менеджер проектов',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Менеджер по продажам',
+            text: `<p>Технические новинки, предложения по улучшению юзабилити сайта, варианты решения бизнес-задач — это и многое другое наш подход к работе. Регулярные отчеты включают в себя понятные детальные описания о состоянии Вашего сервера и сайта</p>`,
+        },
+        {
+            title: 'Копирайтер',
             text: `<p>Технические новинки, предложения по улучшению юзабилити сайта, варианты решения бизнес-задач — это и многое другое наш подход к работе. Регулярные отчеты включают в себя понятные детальные описания о состоянии Вашего сервера и сайта</p>`,
         },
     ]
@@ -820,5 +881,17 @@
         content: [
             'ITC является экспертом крупнейшего в России Digital кластера - РАЭК. ',
             'Мы регулярно участвуем в различных отраслевых конференциях как в качестве слушателей, так и выступаем спикерами по темам, связанным с интернет-маркетингом. ',
+        ]
+    }
+-
+    var corpLife = {
+        imgs: [
+            'corp-life.jpg',
+            'skolkovo.jpg',
+        ],
+        content: [
+            'У нас молодой и дружный коллектив, а также насыщенная корпоративная жизнь. Мы любим отдохнуть и пообщаться в неформальной обстановке в кругу единомышленников.',
+            'Многие корпоративные мероприятия мы совмещаем с обучением сотрудников чему-то новому.',
+            'Внутренний обучающий портал помогает быстро осваивать новые навыки и применять их в работе.',
         ]
     }
