--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -13,7 +13,7 @@ body
     min-height: 100vh
     scroll-behavior: smooth
     text-rendering: optimizeSpeed
-    line-height: 1.5
+    line-height: 1.35
     font-family: $main-font-family
     font-weight: 300
     font-style: normal
@@ -130,6 +130,7 @@ button
         padding-bottom: 20px
     &--top-line
         border-top: 1px solid rgba($main-font-color, .2)
+        margin-top: 60px
 
 .h2
     font-size: 45px
