--- a/dev/static/styles/utils/fonts.sass
+++ b/dev/static/styles/utils/fonts.sass
@@ -5,5 +5,5 @@
 +font-face('Aeroport', '../fonts/Aeroport-BoldItalic', 'bold', italic )
 +font-face('Aeroport', '../fonts/Aeroport-MediumItalic', '500', italic )
 +font-face('Aeroport', '../fonts/Aeroport', )
-+font-face('Aeroport', '../fonts/Aeroport-Italic', 'normal', 'italic' )
+//+font-face('Aeroport', '../fonts/Aeroport-Italic', 'normal', 'italic' )
 +font-face('Aeroport', '../fonts/Aeroport-Medium', 500, )
