--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -79,10 +79,12 @@
 
 
 // Controls
-.controls
+.topcases-card__controls
     +col()
     +size(2)
     +size-md(12)
+
+.controls
 
     display: flex
     flex-direction: column
@@ -251,6 +253,7 @@
     &__title
         font-size: 30px
         line-height: 40px
+        font-weight: 500
     &__desc-block
         +col()
         +size(8)
@@ -263,3 +266,27 @@
     & > *
         &:not(:last-child)
             margin-right: 30px
+
+// Page slider
+
+.page-slider
+    &__title
+        font-size: 30px
+        line-height: 40px
+        font-weight: 500
+    &__wrap
+        +row-flex()
+    &__left
+        +col()
+        +size(8)
+    &__right
+        +col()
+        +size(4)
+        display: flex
+        flex-direction: column
+    &__content
+        margin-bottom: 30px
+    &__controls
+        margin-top: auto
+        border-top: 1px solid rgba($main-font-color, .2)
+        padding-top: 30px
