--- a/dev/static/styles/modules/index/hero.sass
+++ b/dev/static/styles/modules/index/hero.sass
@@ -37,8 +37,7 @@
         margin-top: 20px
         text-align: center
         +sm-block()
-            font-size: 16px
-            line-height: 20px
+            display: none
 
 .blue-text
     color: $accent
