--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -31,7 +31,7 @@
     var mainMenu = [
         {
             name: 'Порфолио',
-            link: '#'
+            link: 'cases.html'
         },
         {
             name: 'Услуги',
@@ -43,7 +43,7 @@
         },
         {
             name: 'Блог',
-            link: '#'
+            link: 'blog.html'
         },
         {
             name: 'Контакты',
@@ -194,31 +194,31 @@
     var tabsStrategy = [
         {
             title: 'Анализ ЦА',
-            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolore doloremque itaque magni placeat, possimus ratione repudiandae sequi!</p>`,
+            text: `<p>Проведем анализ вашей целевой аудитории, поймем, что и как она ищет. Построим customer jorney для различных сегментов целевой аудитории для правильного анализа поискового спроса.</p>`,
         },
         {
             title: 'Сезонность и спрос',
-            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos dolore eius neque possimus quis, ullam ut voluptatem?</p>`,
+            text: `<p>Проведем анализ спроса в нише для оценки потенциального охвата аудитории. Проработаем целевые и около целевые запросы для продвижения. Выберем только самые актуальные и приоритетные.</p>`,
         },
         {
             title: 'Анализ продуктов',
-            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+            text: `<p>Проведем маркетинговый срез по вашему продукту. Выявим позиционирования бренда и сформируем четкие УТП для эффективной работы с целевой аудиторией и контентом при продвижении сайта.</p>`,
         },
         {
             title: 'Технический анализ',
-            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit perferendis repudiandae saepe.</p>`,
+            text: `<p>Определим техническую готовность сайта к продвижению. Поставим задачу в наш техотдел для выявления и исправления ошибок в индексации, скриптов, негативно влияющих на скорость загрузки и т.п.</p>`,
         },
         {
             title: 'Поведенческий анализ',
-            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque eveniet, ex iusto molestias saepe sed.</p>`,
+            text: `<p>Проверим правильность настроек веб-аналитики, привлечем UX-специалиста для выявления текущих проблем с юзабилити, запланируем пул работ, выполним повторные замеры и добьемся их улучшения.</p>`,
         },
         {
             title: 'Прогнозы и сроки',
-            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, tenetur!</p>`,
+            text: `<p>Спрогнозируем динамику роста позиций и трафика на основании полученных данных. Проверим сайт на наличие санкций со стороны ПС и прочих ограничивающих рост факторов. Поставим задачи на вывод из-под фильтров в случае необходимости.</p>`,
         },
         {
             title: 'Отчетность',
-            text: `<p>Передача сайта заказчику (перенос на отдельный хостинг), обучение работе с системой управления сайта (CMS) и дальнейшая техническая поддержка.</p>`,
+            text: `<p>Разработанная стратегия ежемесячно детализируется на пул конкретных задач с четкими таймингами. Ход и результаты выполнения задач всегда доступны в виде наглядных отчетов.</p>`,
         },
     ]
 
@@ -883,6 +883,7 @@
             'Мы регулярно участвуем в различных отраслевых конференциях как в качестве слушателей, так и выступаем спикерами по темам, связанным с интернет-маркетингом. ',
         ]
     }
+
 -
     var corpLife = {
         imgs: [
@@ -895,3 +896,301 @@
             'Внутренний обучающий портал помогает быстро осваивать новые навыки и применять их в работе.',
         ]
     }
+
+-
+    var еtestCard = {
+        title: 'Брянский лес',
+        desc: 'Разработка новой версии сайта для Брянского заповедника',
+        link: '#',
+        img: 'forest32.png',
+        cols: [
+            {
+                num: '25+',
+                text: 'столов было забронировано онлайн в 1-й месяц',
+            },
+            {
+                num: '2',
+                text: 'заказов доставки с сайта в первый месяц',
+            },
+        ],
+        type: 'dev',
+    }
+
+-
+    var еtestCard2 = {
+        title: 'Брянский лес',
+        desc: 'Разработка новой версии сайта для Брянского заповедника',
+        link: '#',
+        img: 'inrus.png',
+        cols: [
+            {
+                num: '25+',
+                text: 'столов было забронировано онлайн в 1-й месяц',
+            },
+            {
+                num: '2',
+                text: 'заказов доставки с сайта в первый месяц',
+            },
+        ],
+        type: 'dev',
+        width: '130%',
+    }
+
+-
+    var marketingCards = [
+        {
+            title: 'МСК Групп',
+            desc: 'Разработка новой версии сайта для Брянского заповедника',
+            link: '#',
+            img: 'msk_group.jpg',
+            cols: [
+                {
+                    num: '25+',
+                    text: 'столов было забронировано онлайн в 1-й месяц',
+                },
+                {
+                    num: '2',
+                    text: 'заказов доставки с сайта в первый месяц',
+                },
+            ],
+            type: 'marketing',
+        },
+        {
+            title: 'МСК Групп',
+            desc: 'Разработка новой версии сайта для Брянского заповедника',
+            link: '#',
+            img: 'msk_group.jpg',
+            cols: [
+                {
+                    num: '25+',
+                    text: 'столов было забронировано онлайн в 1-й месяц',
+                },
+                {
+                    num: '2',
+                    text: 'заказов доставки с сайта в первый месяц',
+                },
+            ],
+            type: 'marketing',
+        },
+        {
+            title: 'МСК Групп',
+            desc: 'Разработка новой версии сайта для Брянского заповедника',
+            link: '#',
+            img: 'msk_group.jpg',
+            cols: [
+                {
+                    num: '25+',
+                    text: 'столов было забронировано онлайн в 1-й месяц',
+                },
+                {
+                    num: '2',
+                    text: 'заказов доставки с сайта в первый месяц',
+                },
+            ],
+            type: 'marketing',
+        },
+    ]
+
+-
+    var developCards = [
+        {
+            title: `Августин`,
+            desc: `Разработка новой версии сайта для пивного ресторана`,
+            link: `#`,
+            img: `forest32.png`,
+            cols: [
+                {
+                    num: `100+`,
+                    text: `столов было забронировано онлайн в 1-й месяц`,
+                },
+                {
+                    num: `R-Keeper`,
+                    text: `настроена синхронизация  с меню на сайте`,
+                },
+            ],
+            type: `dev`,
+        },
+        {
+            title: `Агроэксперт`,
+            desc: `Разработка новой версии сайта для комбикормового завода`,
+            link: `#`,
+            img: `inrus.png`,
+            width: '120%',
+            cols: [
+                {
+                    num: `3D-анимация`,
+                    text: `на сайте выполнена в рамках разработки проекта`,
+                },
+                {
+                    num: `Битрикс24`,
+                    text: `проведена интеграция сайта  с CRM`,
+                },
+            ],
+            type: `dev`,
+        },
+        {
+            title: `КвинТур`,
+            desc: `Разработка новой версии сайта для туристической компании`,
+            link: `#`,
+            img: `inrus.png`,
+            width: '120%',
+            cols: [
+                {
+                    num: `1000+`,
+                    text: `туров по различным направлениям на сайте`,
+                },
+                {
+                    num: `Самотур`,
+                    text: `проведена интеграция с системой онлайн-бронирования`,
+                },
+            ],
+            type: `dev`,
+        },
+        {
+            title: `БэстАвто`,
+            desc: `Разработка нового сайта для оптового магазина автозапчастей`,
+            link: `#`,
+            img: `forest32.png`,
+            cols: [
+                {
+                    num: `8000+ SKU`,
+                    text: `товарных единиц, содержит каталог товаров`,
+                },
+                {
+                    num: `1C`,
+                    text: `синхронизация с каталогом товаров`,
+                },
+            ],
+            type: `dev`,
+        },
+        {
+            title: `Криостар`,
+            desc: `Разработка нового сайта для оптового магазина автозапчастей`,
+            link: `#`,
+            img: `inrus.png`,
+            width: '120%',
+            cols: [
+                {
+                    num: `3D-анимация`,
+                    text: `на сайте выполнена в рамках разработки проекта`,
+                },
+                {
+                    num: `Битрикс24`,
+                    text: `проведена интеграция сайта  с CRM`,
+                },
+            ],
+            type: `dev`,
+        },
+        {
+            title: `MiAmour`,
+            desc: `Разработка нового сайта для магазина цветов`,
+            link: `#`,
+            img: `inrus.png`,
+            width: '120%',
+            cols: [
+                {
+                    num: `3D-анимация`,
+                    text: `на сайте выполнена в рамках разработки проекта`,
+                },
+                {
+                    num: `Битрикс24`,
+                    text: `проведена интеграция сайта  с CRM`,
+                },
+            ],
+            type: `dev`,
+        },
+        {
+            title: `Дятьковский хрусталь`,
+            desc: `Разработка нового сайта для торговой марки «Шувалов»`,
+            link: `#`,
+            img: `inrus.png`,
+            width: '120%',
+            cols: [
+                {
+                    num: `в 1790 году`,
+                    text: `заложено производство  стекла и хрусталя`,
+                },
+                {
+                    num: `1000+`,
+                    text: `выпускаемых ежедневно изделий`,
+                },
+            ],
+            type: `dev`,
+        },
+        {
+            title: `Радуга окон`,
+            desc: `Разработка новой версии сайта для оконной компании`,
+            link: `#`,
+            img: `inrus.png`,
+            width: '120%',
+            cols: [
+                {
+                    num: `Калькулятор`,
+                    text: `для подбора окна любой конфигурации`,
+                },
+                {
+                    num: `Битрикс24`,
+                    text: `проведена интеграция сайта  с CRM`,
+                },
+            ],
+            type: `dev`,
+        },
+        {
+            title: `Брянский лес`,
+            desc: `Разработка новой версии сайта для оконной компании`,
+            link: `#`,
+            img: `inrus.png`,
+            width: '120%',
+            cols: [
+                {
+                    num: `Калькулятор`,
+                    text: `для подбора окна любой конфигурации`,
+                },
+                {
+                    num: `Битрикс24`,
+                    text: `проведена интеграция сайта  с CRM`,
+                },
+            ],
+            type: `dev`,
+        },
+    ]
+
+-
+    var posts = [
+        {
+            title: `Дизайн, основанный на опыте пользователя`,
+            type: `Интернет-маркетинг`,
+            link: `#`,
+            img: `design.jpg`,
+        },
+        {
+            title: `Вся правда про SSL-сертификаты`,
+            type: `Разработка`,
+            link: `#`,
+            img: `ssl.jpg`,
+        },
+        {
+            title: `A/B тестирование  и оптимизация страниц`,
+            type: `Разработка`,
+            link: `#`,
+            img: `abtest.jpg`,
+        },
+        {
+            title: `Дизайн, основанный на опыте пользователя`,
+            type: `Интернет-маркетинг`,
+            link: `#`,
+            img: `design.jpg`,
+        },
+        {
+            title: `A/B тестирование и оптимизация страниц`,
+            type: `Разработка`,
+            link: `#`,
+            img: `abtest.jpg`,
+        },
+        {
+            title: `Вся правда про SSL-сертификаты`,
+            type: `Интернет-маркетинг`,
+            link: `#`,
+            img: `ssl.jpg`,
+        },
+    ]
