--- a/dev/pug/site-develop.pug
+++ b/dev/pug/site-develop.pug
@@ -8,7 +8,8 @@ block content
     include modules/page-title
     +badges(developBadges)
     +taber(tabsDevelop)
-    include modules/topcases
+    +portfolioCard(еtestCard)
+    +portfolioCard(еtestCard2)
     +taber(tabsAnalitics, 'Аналитика', 'light')
     +avideo(devAvideo)
     +taber(tabsStepsDev, 'Этапы разработки сайта', 'grey')
