--- a/dev/pug/site-promotion.pug
+++ b/dev/pug/site-promotion.pug
@@ -7,7 +7,7 @@ block variables
 block content
     include modules/page-title
     +badges(promBadges)
-    include modules/focus
+    //-include modules/focus
     +taber(tabsPromo1)
     include modules/topcases
     +feedbackSlider(feedbacks, 'Отзывы')
