--- a/dev/static/styles/modules/footer/footer.sass
+++ b/dev/static/styles/modules/footer/footer.sass
@@ -11,9 +11,9 @@ footer
         +col()
         +size(6)
 
-        +size-xs(12)
+        +size-sm(12)
         &:nth-child(2)
-            +xs-block()
+            +sm-block()
                 margin-top: 20px
         &:nth-child(3)
             +size-sm(12)
@@ -25,8 +25,6 @@ footer
         display: flex
         justify-content: flex-end
         +sm-block()
-            justify-content: flex-start
-        +xs-block()
             justify-content: center
     &__icon
         &:not(:last-child)
