--- a/dev/static/styles/modules/index/clients.sass
+++ b/dev/static/styles/modules/index/clients.sass
@@ -13,6 +13,8 @@
         justify-content: center
         align-items: center
         width: 215px
+        +xs-block()
+            width: 100px
     &__img
         &:hover
             filter: url(#monochrome)
