--- a/dev/static/styles/modules/index/showreel.sass
+++ b/dev/static/styles/modules/index/showreel.sass
@@ -10,6 +10,9 @@
         +row-flex()
         +sm-block()
             padding: 40px
+            min-height: 400px
+        +xs-block()
+            min-height: 300px
     &__desc
         +col()
         +size(6)
