--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -7,6 +7,7 @@
 @import "taber"
 @import "topcases"
 @import "contacts-page"
+@import "portfolio-cards"
 
 
 // Page title h1
@@ -302,3 +303,88 @@
             border-top: none
             padding-top: 10px
             padding-bottom: 20px
+
+// Cases page
+
+.cases-line
+    display: flex
+    justify-content: flex-start
+    align-items: center
+    background-color: $grey
+    padding-left: 30px
+    padding-right: 30px
+    +xs-block()
+        padding-left: 20px
+        padding-right: 20px
+
+    &__tab
+        color: $main-font-color
+        line-height: 70px
+        +sm-block()
+            font-size: 16px
+        +xs-block()
+            line-height: 18px
+            height: 70px
+            display: flex
+            align-items: center
+            text-align: center
+            font-size: 13px
+        &:not(:last-child)
+            margin-right: 100px
+            +sm-block()
+                margin-right: 40px
+            +xs-block()
+                margin-right: 20px
+        &--active
+            border-bottom: 1px solid $main-font-color
+
+.cases-content
+    &__tab
+        display: none
+        &--active
+            display: block
+
+// Post cards
+
+.post-cards
+    +row-flex()
+.post-card
+    +col()
+    +size(4)
+    +size-sm(12)
+
+    &__img
+        display: block
+        -webkit-background-size: cover
+        background-size: cover
+        background-repeat: no-repeat
+        background-position: center center
+        width: 100%
+        height: 220px
+        margin-top: 20px
+        margin-bottom: 40px
+        position: relative
+        &::after
+            opacity: 0
+            position: absolute
+            content: ''
+            display: block
+            top: 0
+            bottom: 0
+            left: 0
+            right: 0
+            z-index: 3
+            background-color: rgba($accent, .4)
+            backdrop-filter: blur(3px)
+            transition: opacity .3s ease
+
+    &:hover
+        .post-card__img
+            &::after
+                opacity: 1
+
+.blog-page
+    .post-card
+        margin-bottom: 60px
+        +sm-block()
+            margin-bottom: 30px
