Fix bugs 23.04 path2

--- a/dev/pug/pages/index/hr.pug
+++ b/dev/pug/pages/index/hr.pug
@@ -2,19 +2,19 @@
     let vacancies = [
         {
             name: 'SMM-специалист',
-            link: '',
+            link: 'company.html#vacancies',
         },
         {
             name: 'Специалист по контекстной рекламе',
-            link: '',
+            link: 'company.html#vacancies',
         },
         {
             name: 'SEO-специалист',
-            link: '',
+            link: 'company.html#vacancies',
         },
         {
             name: 'Аналитик',
-            link: '',
+            link: 'company.html#vacancies',
         },
     ]
 
