--- a/dev/static/styles/modules/main-nav/main-nav.sass
+++ b/dev/static/styles/modules/main-nav/main-nav.sass
@@ -110,6 +110,7 @@
     height: 20px
     position: relative
     width: 32px
+    margin-left: 30px
     &:hover, &:focus
         .sandwich__line
             background-color: $accent
