--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -32,7 +32,7 @@
         &__city
             a
                 &:hover, &:focus
-                    color: $accent
+                    color: $main-font-color
                     svg
                         fill: $accent // todo fixed hoverout
         &__cities
@@ -94,14 +94,10 @@
             a
                 font-size: 13px
 
-
-    &__city
+    &__showreel
         display: flex
-        margin-right: 40px
-        position: relative
-        min-width: 200px
-        a
-            z-index: 5
+        svg
+            margin-right: 10px
         +md-block()
             display: none
 
@@ -109,30 +105,45 @@
         +md-block()
             display: none
 
-    &__showreel
+    &__city
         display: flex
-        svg
-            margin-right: 10px
+        margin-right: 40px
+        position: relative
+        color: $accent
+        & > *
+            z-index: 5
         +md-block()
             display: none
+
+        .icon-triangle-down
+            width: 11px
+            height: 10px
+            transition: all 0.3s ease
+
+        &:hover
+            .header__cities
+                transform: none
+                opacity: 1
+                pointer-events: auto
+            .icon-triangle-down
+                transform: rotate(180deg)
+
     &__cities
         position: absolute
         z-index: 4
         left: -25px
-        right: -25px
-        top: -20px
-        padding-top: 70px
-        padding-left: 25px
-        padding-right: 25px
+        padding-top: 30px
+        top: 100%
+        white-space: nowrap
+        pointer-events: none
+        opacity: 0
+        transform: translateY(10px)
+        transition: all .3s ease
+    &__subcities
+        padding: 30px 25px !important
         background-color: rgba($grey, .9)
         backdrop-filter: blur(6px)
-        padding-bottom: 60px
-        display: none
-    &__subcities
-        opacity: 0
-        transition: opacity .3s ease
-        &.active
-            opacity: 1
+
 
     &__link
         display: flex
