--- a/dev/pug/modules/header/header.pug
+++ b/dev/pug/modules/header/header.pug
@@ -22,7 +22,7 @@ header.b-header
                                     li._subcity
                                         a._link(href= city.link, title= city.name)= city.name
 
-                button.b-btn.-flat._btn(data-action='popup', data-target='consultation') Заказать консультацию
+                button.b-btn.-flat._btn(data-action='popup', data-target='consultation') Заказать звонок
 
             .b-sandwich._sandwich
                 ._line.-top
