Add site support in menu

--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -62,12 +62,12 @@
             link: 'context.html'
         },
         {
-            name: 'Таргетированная реклама',
-            link: '#'
-        },
-        {
             name: 'Маркетинг в соцсетях',
             link: 'smm.html'
+        },
+        {
+            name: 'Поддержка сайтов',
+            link: 'site-support.html'
         },
         {
             name: 'Разработка и развитие сайтов',
