Cases tab bottom-padding

--- a/dev/pug/pages/cases/main-section.pug
+++ b/dev/pug/pages/cases/main-section.pug
@@ -1,4 +1,4 @@
-section.section
+section.section.section--min-bottom
     .b-cases-line
         a(data-target='marketing', title="Интернет маркетинг")._tab.-active Интернет маркетинг
         a(data-target='develop', title="Разработка сайтов")._tab Разработка сайтов
