--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -125,12 +125,14 @@ button
         color: $white
         padding-right: 30px
         padding-left: 30px
-    +xs-block()
-        padding-top: 20px
-        padding-bottom: 20px
     &--top-line
         border-top: 1px solid rgba($main-font-color, .2)
         margin-top: 60px
+    &--min-bottom
+        padding-bottom: 0
+    +xs-block()
+        padding-top: 20px
+        padding-bottom: 20px
 
 .h2
     font-size: 45px
