--- a/dev/pug/pages/index/showreel.pug
+++ b/dev/pug/pages/index/showreel.pug
@@ -3,7 +3,7 @@ section.section
     .b-showreel
         h2.h2._title Компания
         ._wrap(style="background-image: url(images/general/showreel_bg.jpg)")
-            ._desc
+            ._text
                 h3.h3._subtitle О нас за 90 секунд
                 ul._items
                     li._item Маркетинг в основе
