--- a/dev/pug/utils/mixins.pug
+++ b/dev/pug/utils/mixins.pug
@@ -73,14 +73,14 @@ mixin badges(arr)
 
 mixin avideo(arr)
     section.section
-        .b-avideo
+        .b-showreel
             h2.h2._title= arr.title
             ._wrap(style=`background-image: url(images/general/${arr.bg})`)
                 ._text
-                    ._subtitle= arr.subtitle
-                    ul._steps
+                    h3.h3._subtitle= arr.subtitle
+                    ul._items
                         each step in arr.steps
-                            li._step= step
+                            li._item= step
                 ._btn-wrap
                     a(data-fancybox, href= arr.link).b-btn.-big.-full.-blue.-round._btn
                         +icon('empty_triangle', 'btn__icon-empty-triangle')
