--- a/dev/static/styles/modules/index/showreel.sass
+++ b/dev/static/styles/modules/index/showreel.sass
@@ -13,7 +13,7 @@
             min-height: 400px
         +xs-block()
             min-height: 300px
-    &__desc
+    &__text
         +col()
         +size(6)
         +size-sm(12)
