Active tab in taber restyle

--- a/dev/static/styles/modules/taber.sass
+++ b/dev/static/styles/modules/taber.sass
@@ -36,6 +36,7 @@
     &__left
         width: 50%
         position: relative
+        align-self: flex-start
         &::after
             content: ''
             display: block
@@ -75,6 +76,7 @@
         opacity: .5
         transition: all .5s ease
         cursor: pointer
+        padding-right: 30px
         +sm-block()
             display: flex
             justify-content: center
