--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -41,6 +41,10 @@
         +sizebox(76px)
         min-width: 76px
         min-height: 76px
+        +sm-block()
+            +sizebox(38px)
+            min-width: 38px
+            min-height: 38px
 
     &--big
         +sizebox(208px)
@@ -84,6 +88,9 @@
         &-arrow
             width: 38px
             height: 29px
+            +sm-block()
+                width: 19px
+                height: 15px
         &-user
             +sizebox(40px)
             margin-bottom: 21px
