--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -102,6 +102,9 @@
         color: $accent
         &--light
             color: $white
+        +sm-block()
+            font-size: 20px
+            line-height: 25px
     &__prev
         margin-right: 10px
 
