--- a/dev/pug/company.pug
+++ b/dev/pug/company.pug
@@ -9,6 +9,7 @@ block content
     +pageSlider('Мероприятия', events)
     include pages/company/press
     +pageSlider('Корпоративная жизнь', corpLife)
+    // todo решить с вакансиями
     +taber(tabsHr, 'Вакансии', 'light', 'vacancies')
     include pages/company/more
 
