Link in contact form recolor

--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -159,7 +159,7 @@
 
 // Consult form
 .consult-form
-    padding-bottom: 60px
+    padding-bottom: 30px
     &__desc
         max-width: 380px
     &__approwe
@@ -169,6 +169,7 @@
             color: $white
             text-decoration: none
             &:hover, &:focus
+                color: rgba($white, .5)
                 text-decoration: underline
 
 // Support format
