Figma space bug

--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -34,7 +34,7 @@
                 &:hover, &:focus
                     color: $main-font-color
                     svg
-                        fill: $accent // todo fixed hoverout
+                        fill: $accent
         &__cities
             a
                 color: $accent
