Line think change

--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -340,7 +340,7 @@
             +xs-block()
                 margin-right: 20px
         &--active
-            border-bottom: 1px solid $main-font-color
+            border-bottom: 2px solid $accent
 
 .cases-content
     &__tab
